# hocket

./: .gitignore  Cargo.toml  README.md
crates/hocket-engine/: Cargo.toml
crates/hocket-engine/src/: export.rs  handoff.rs  lib.rs  media.rs  project_store.rs  waveform.rs
crates/hocket-engine/tests/: capture_pipeline.rs
crates/hocket-genet/: Cargo.toml
crates/hocket-genet/src/: identity.rs  leaves.rs  main.rs  project_io.rs  scenario.rs  state.rs  view.rs
crates/hocket-headless/: Cargo.toml
crates/hocket-headless/src/: main.rs
crates/hocket-model/: Cargo.toml
crates/hocket-model/src/: lib.rs  persistence.rs  session.rs
crates/hocket-model/tests/: validation.rs
crates/strophe-engine/: Cargo.toml
crates/strophe-engine/src/: capture.rs  click.rs  export.rs  handoff.rs  lib.rs  media.rs  waveform.rs
crates/strophe-genet/src/: main.rs
crates/strophe-model/src/: history.rs
crates/strophe-serval/: Cargo.toml
crates/strophe-widgets/: Cargo.toml
crates/strophe-widgets/src/: lib.rs
design_docs/: 2026-05-18_initial_plan.md  2026-07-08_serval_host_refactor_plan.md  2026-07-09_audio-device-selection_plan.md  2026-07-09_free-loop-export-duration_plan.md  2026-07-09_loop-export_plan.md  2026-07-09_muniment-project-store_plan.md  2026-07-09_project-controls_plan.md  2026-07-10_history-branches_plan.md  2026-07-10_signed-handoff-envelope_plan.md  2026-07-11_real_waveforms_meter_ballistics_plan.md  2026-07-14_open-project-format_plan.md  2026-07-18_handoff-ui_plan.md  DOC_README.md  PROJECT_DESCRIPTION.md
scenarios/: handoff_circle.scn
(+12 files in other folders)
