[package]
name = "strophe-widgets"
version = "0.1.0"
description = "Masonry custom widgets for Strophe: waveform, track strip, transport, combination grid."
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Waveform + peaks + meter live in the shared `audio-widgets` crate
# (audio-domain layer); the combobox + future generic widgets live in
# `xilem-components` (domain-neutral layer beneath it). Both in the
# woodshed repo; re-exported from lib.rs. Strophe-specific widgets
# (track strip, transport, combination grid) will land here.
audio-widgets = { workspace = true }
xilem-components = { workspace = true }
